--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= subreddit %> Not Found</title>
-  </head>
+<%- include("partials/head")%>
   <body>
+    <%- include("partials/navbar") %>
     <h1><%= subreddit %> Not Found</h1>
 
     <h1>We are sorry! Page not Found!!!</h1>
-  </body>
-</html>
+
+    <%- include("partials/footer") %>
