--- a/views/SubReddit.ejs
+++ b/views/SubReddit.ejs
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= code %></title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">  
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar  navbar-expand-lg bg-body-tertiary">
-        <a class="navbar-brand" href="#">School Page</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/views/about.ejs">About</a>
-            <a class="nav-link" href="/r/compro">ComPro</a>
-            <a class="nav-link" href="/r/msd">MSD</a>
-            <a class="nav-link" href="/r/ayurveda">Ayurveda</a>
-          </div>
-        </div>
-    </nav>
+<%- include("./partials/head") %>
+  
+  <%- include("partials/navbar")%>  
   </div class= "container">
     <h1><%= code %></h1>
     <h3><%= description %></h3>
@@ -45,5 +22,5 @@
       fuga quae.
     </p>
   </div>
-  </body>
-</html>
+
+<%- include("partials/footer") %>
